--- a/html/accountMain.html
+++ b/html/accountMain.html
@@ -7,19 +7,21 @@
     <title>KOKOA BANK</title>
     <!-- 부트스트랩 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+	<!-- JqueryUi -->
 	<link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
+	<!-- Fontawesome -->
 	<script src="https://kit.fontawesome.com/b05f67c88a.js" crossorigin="anonymous"></script>
 </head>
 <body>
 	<header class="p-3 text-bg-dark">
-		<div class="container">
+		<div class="container-fluid">
       		<div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         		<ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
          	 		<li><a href="index.html" class="nav-link px-2 text-secondary">KOKOA BANK</a></li>
           			<li><a href="accountMain.html" class="nav-link px-2 text-white">조회</a></li>
           			<li class="dropdown">
           				<a href="#" class="nav-link px-2 text-white" role="button" data-bs-toggle="dropdown" aria-expanded="false">거래</a>
-          				<ul class="dropdown-menu">
+          				<ul class="dropdown-menu" data-bs-theme="dark">
           					<li><a class="dropdown-item" href="depositMain.html">입금</a></li>
           					<li><a class="dropdown-item" href="depositTransfer.html">이체</a></li>
           					<li><a class="dropdown-item" href="depositAutoTransfer.html">자동이체</a></li>
@@ -28,7 +30,7 @@
           			<li><a href="exchangeRate.html" class="nav-link px-2 text-white">환율</a></li>
           			<li class="dropdown">
           				<a href="#" class="nav-link px-2 text-white" role="button" data-bs-toggle="dropdown" aria-expanded="false">주식</a>
-          				<ul class="dropdown-menu">
+          				<ul class="dropdown-menu" data-bs-theme="dark">
         					<li><a class="dropdown-item" href="domesticStock.html">국내</a></li>
           					<li><a class="dropdown-item" href="foreignStock.html">해외</a></li>
         				</ul>
@@ -404,7 +406,7 @@
 	  	</button>
 	</div>	
 	<form>
-		<div class="modal fade" id="accountAdd" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+		<div class="modal fade bg-body-secondary" id="accountAdd" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
 	  		<div class="modal-dialog">
 	    		<div class="modal-content" style="width: 622px; height: 439px; padding: 50px;">
 	      			<div class="modal-header d-flex justify-content-around">
@@ -425,7 +427,7 @@
 		</div>
 	</form>
 	<form>
-		<div class="modal fade" id="accountCorrect" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+		<div class="modal fade bg-body-secondary" id="accountCorrect" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
 	  		<div class="modal-dialog">
 	    		<div class="modal-content" style="width: 622px; height: 622px; padding: 50px;">
 	      			<div class="modal-header d-flex justify-content-around">
@@ -448,7 +450,7 @@
 	  		</div>
 		</div>
 	</form>
-	<div class="modal fade" id="deleteCheck" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropTitle" aria-hidden="true">
+	<div class="modal fade bg-body-secondary" id="deleteCheck" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropTitle" aria-hidden="true">
   		<div class="modal-dialog">
     		<div class="modal-content" style="width: 622px; height: 622px; padding: 50px;">
 	    		<div class="modal-header">
@@ -458,17 +460,28 @@
         			정말로 삭제 하시겠습니까?
       			</div>
       			<div class="modal-footer d-flex justify-content-center">
-        			<button type="button" class="btn btn-outline-danger">삭제</button>
+        			<button type="button" class="btn btn-outline-danger" id="modalDelete">삭제</button>
         			<button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">취소</button>
       			</div>
     		</div>
   		</div>
 	</div>	
+	<div class="container-fluid">
+  		<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+    		<ul class="nav col-md-4 justify-content-start list-unstyled d-flex">
+    			<li><a href="#" class="nav-link px-2 text-secondary">KOKOA BANK</a></li>
+    		</ul>
+    		<div class="col-md-4 d-flex align-items-center justify-content-end">
+      			<span class="mb-3 mb-md-0 text-body-secondary">&copy; 2023 Company, Inc</span>
+    		</div>
+  		</footer>
+	</div>
     <!-- 부트스트랩 JS-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
     <!-- JQUERY -->
     <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+    <!-- JqueryUi -->
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     <script type="text/javascript">
 
