--- a/html/depositAutoTransfer.html
+++ b/html/depositAutoTransfer.html
@@ -7,17 +7,19 @@
     <title>KOKOA BANK</title>
     <!-- 부트스트랩 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+	<!-- JqueryUi -->
+	<link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
 </head>
 <body>
 	<header class="p-3 text-bg-dark">
-		<div class="container">
+		<div class="container-fluid">
       		<div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         		<ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
          	 		<li><a href="index.html" class="nav-link px-2 text-secondary">KOKOA BANK</a></li>
           			<li><a href="accountMain.html" class="nav-link px-2 text-white">조회</a></li>
           			<li class="dropdown">
           				<a href="#" class="nav-link px-2 text-white" role="button" data-bs-toggle="dropdown" aria-expanded="false">거래</a>
-          				<ul class="dropdown-menu">
+          				<ul class="dropdown-menu" data-bs-theme="dark">
           					<li><a class="dropdown-item" href="depositMain.html">입금</a></li>
           					<li><a class="dropdown-item" href="depositTransfer.html">이체</a></li>
           					<li><a class="dropdown-item" href="depositAutoTransfer.html">자동이체</a></li>
@@ -26,7 +28,7 @@
           			<li><a href="exchangeRate.html" class="nav-link px-2 text-white">환율</a></li>
           			<li class="dropdown">
           				<a href="#" class="nav-link px-2 text-white" role="button" data-bs-toggle="dropdown" aria-expanded="false">주식</a>
-          				<ul class="dropdown-menu">
+          				<ul class="dropdown-menu" data-bs-theme="dark">
         					<li><a class="dropdown-item" href="domesticStock.html">국내</a></li>
           					<li><a class="dropdown-item" href="foreignStock.html">해외</a></li>
         				</ul>
@@ -35,15 +37,76 @@
       		</div>
     	</div>
 	</header>
-	
+	<div class="container-fluid text-center">
+		<h2 style="margin-top: 50px;">자동이체</h2>
+		<form>
+			<div class="row-md-auto" style="padding: 50px;">
+				<div class="col-md-auto" style="margin: 10px;">
+					<select id="" class="form-select">
+   						<option selected disabled>계좌선택</option>
+   						<option>1번</option>
+   						<option>2번</option>
+						<option>3번</option>
+   					</select>
+				</div>
+				<div class="col-md-auto" style="margin: 10px;">
+					<input type="text" class="form-control" placeholder="잔액" disabled>
+				</div>
+				<div class="col-md-auto" style="margin: 10px;">
+					<input type="text" class="form-control" placeholder="계좌번호">
+				</div>
+				<div class="col-md-auto" style="margin: 10px;">
+					<input type="text" class="form-control" placeholder="금액">
+				</div>
+				<div class="col-md-auto" style="margin: 10px;">
+					<input type="text" class="form-control" placeholder="받는사람 이름">
+				</div>
+				<div class="col-md-auto" style="margin: 10px;">
+					<input type="text" class="form-control" placeholder="입금자명">
+				</div>
+				<div class="col-md-auto" style="margin: 10px;">
+					<input type="password" class="form-control" placeholder="비밀번호">
+				</div>
+				<div class="col-md-auto" style="margin: 10px;">
+					<input type="text" class="form-control datepicker" placeholder="자동이체 시작날짜">
+				</div>
+				<div class="col-md-auto" style="margin: 10px;">
+					<input type="text" class="form-control datepicker" placeholder="자동이체 종료날짜">
+				</div>
+			</div>
+		</form>
+		<div class="d-flex justify-content-center">
+			<button class="btn btn-outline-success">확인</button>
+	    	<button class="btn btn-outline-danger">취소</button>   		
+	    </div>	
+	</div>
+	<div class="container-fluid">
+  		<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+    		<ul class="nav col-md-4 justify-content-start list-unstyled d-flex">
+    			<li><a href="#" class="nav-link px-2 text-secondary">KOKOA BANK</a></li>
+    		</ul>
+    		<div class="col-md-4 d-flex align-items-center justify-content-end">
+      			<span class="mb-3 mb-md-0 text-body-secondary">&copy; 2023 Company, Inc</span>
+    		</div>
+  		</footer>
+	</div>
     <!-- 부트스트랩 JS-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
     <!-- JQUERY -->
     <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+    <!-- JqueryUi -->
+    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     <script type="text/javascript">
 
-		
+ 		// datepicker
+		$(function() {
+	
+			$(".datepicker").datepicker({
+				dateFormat: 'yy-mm-dd'
+			});
+	
+		});
 
     </script>
 </body>
