--- a/html/index.html
+++ b/html/index.html
@@ -10,14 +10,14 @@
 </head>
 <body>
 	<header class="p-3 text-bg-dark">
-		<div class="container">
+		<div class="container-fluid">
       		<div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         		<ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
          	 		<li><a href="index.html" class="nav-link px-2 text-secondary">KOKOA BANK</a></li>
           			<li><a href="accountMain.html" class="nav-link px-2 text-white">조회</a></li>
           			<li class="dropdown">
           				<a href="#" class="nav-link px-2 text-white" role="button" data-bs-toggle="dropdown" aria-expanded="false">거래</a>
-          				<ul class="dropdown-menu">
+          				<ul class="dropdown-menu" data-bs-theme="dark">
           					<li><a class="dropdown-item" href="depositMain.html">입금</a></li>
           					<li><a class="dropdown-item" href="depositTransfer.html">이체</a></li>
           					<li><a class="dropdown-item" href="depositAutoTransfer.html">자동이체</a></li>
@@ -26,7 +26,7 @@
           			<li><a href="exchangeRate.html" class="nav-link px-2 text-white">환율</a></li>
           			<li class="dropdown">
           				<a href="#" class="nav-link px-2 text-white" role="button" data-bs-toggle="dropdown" aria-expanded="false">주식</a>
-          				<ul class="dropdown-menu">
+          				<ul class="dropdown-menu" data-bs-theme="dark">
         					<li><a class="dropdown-item" href="domesticStock.html">국내</a></li>
           					<li><a class="dropdown-item" href="foreignStock.html">해외</a></li>
         				</ul>
@@ -40,10 +40,10 @@
     	</div>
 	</header>
 	<div class="container-fluid">
-		<div class="h4 d-flex justify-content-center">인플루언서</div>
+		<div class="h4 d-flex justify-content-center" style="margin-top: 50px;">인플루언서</div>
 		<div class="row">
 			<div class="d-flex justify-content-center" style="padding: 33px;">
-				<iframe width="100%" height="600" src="https://www.youtube-nocookie.com/embed/tSK3qmsWyy4?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<iframe width="100%" height="700" src="https://www.youtube-nocookie.com/embed/tSK3qmsWyy4?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</div>	
 		</div>
 		<div class="row d-flex justify-content-around" style="padding: 33px;">
@@ -90,11 +90,11 @@
 		</div>	
 	</div>
 	<div class="container-fluid">
-		<div class="h4 d-flex justify-content-center">NEWS</div>
-		<div class="h4 d-flex justify-content-center">실시간 뉴스 금융 페이지 API로 가져올 예정</div>
+		<div class="h4 d-flex justify-content-center" style="margin-top: 50px;">NEWS</div>
+		<div class="h4 d-flex justify-content-center">API</div>
 	</div>
 	<form>
-		<div class="modal fade" id="signIn" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+		<div class="modal fade bg-body-secondary" data-bs-theme="dark" id="signIn" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
 	  		<div class="modal-dialog">
 	    		<div class="modal-content" style="width: 622px; height: 439px; padding: 50px;">
 	      			<div class="modal-header d-flex justify-content-around">
@@ -113,7 +113,7 @@
 		</div>
 	</form>
 	<form>
-		<div class="modal fade" id="signUp" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+		<div class="modal fade bg-body-secondary" data-bs-theme="dark" id="signUp" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" dialog aria-labelledby="staticBackdropLabel" aria-hidden="true">
 	  		<div class="modal-dialog">
 	    		<div class="modal-content" style="width: 622px; height: 622px; padding: 50px;">
 	      			<div class="modal-header d-flex justify-content-around">
@@ -147,6 +147,16 @@
 	  		</div>
 		</div>
 	</form>
+	<div class="container-fluid">
+  		<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+    		<ul class="nav col-md-4 justify-content-start list-unstyled d-flex">
+    			<li><a href="#" class="nav-link px-2 text-secondary">KOKOA BANK</a></li>
+    		</ul>
+    		<div class="col-md-4 d-flex align-items-center justify-content-end">
+      			<span class="mb-3 mb-md-0 text-body-secondary">&copy; 2023 Company, Inc</span>
+    		</div>
+  		</footer>
+	</div>
     <!-- 부트스트랩 JS-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
