--- a/html/index.html
+++ b/html/index.html
@@ -5,16 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KOKOA BANK</title>
-     <!-- Vendor CSS Files -->
+    <!-- Vendor CSS Files -->
   	<link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   	<link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  	<link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  	<link href="assets/vendor/quill/quill.snow.css" rel="stylesheet">
-  	<link href="assets/vendor/quill/quill.bubble.css" rel="stylesheet">
-  	<link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
-  	<link href="assets/vendor/simple-datatables/style.css" rel="stylesheet">
-  	<!-- Template Main CSS File -->
-  	<link href="assets/css/style.css" rel="stylesheet">
 	<!-- JqueryUi -->
 	<link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
 	<!-- Fontawesome -->
@@ -23,9 +16,46 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Dongle:wght@300;400;700&display=swap" rel="stylesheet">
+	<style>
+		body {
+			padding: 0;
+			margin: 0;
+			border: 0;
+		}
+		
+		.back-to-top {
+	  		position: fixed;
+		  	visibility: hidden;
+		  	opacity: 0;
+		  	right: 15px;
+		  	bottom: 15px;
+		  	z-index: 99999;
+		  	background: #4154f1;
+		  	width: 40px;
+		  	height: 40px;
+		  	border-radius: 4px;
+		  	transition: all 0.4s;
+		}
+		
+		.back-to-top i {
+		  	font-size: 24px;
+		  	color: #fff;
+		  	line-height: 0;
+		}
+		
+		.back-to-top:hover {
+		  	background: #6776f4;
+		  	color: #fff;
+		}
+		
+		.back-to-top.active {
+		  	visibility: visible;
+		  	opacity: 1;
+		}
+	</style>
 </head>
 <body>
-	<header class="fixed-top" id="header" style="width: 1320px; margin: auto;">
+	<header class="fixed-top bg-white" id="header" style="width: 1320px; margin: auto;">
 		<div class="container">
       		<div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         		<ul class="nav col-auto me-auto mb-2 justify-content-center align-items-center">
@@ -46,10 +76,10 @@
       		</div>
     	</div>
 	</header>
-	<!-- main -->
+	<!-- 메인 -->
 	<div class="container">
 		<div class="row">
-			<div class="d-flex justify-content-center" style="padding: 33px; height: 600px; margin-top: 80px;">
+			<div class="d-flex justify-content-center" style="padding: 33px; height: 600px; margin-top: 50px;">
 				<iframe width="1200" height="100%" src="https://www.youtube.com/embed/NJUjU9ALj4A?controls=0?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="border-radius: 15px; margin: 50px;"></iframe>
 			</div>	
 		</div>
@@ -137,11 +167,11 @@
 		</div>	
 	</div>
 	<!-- 뉴스 -->
-	<div class="container" id="news" style="width: 1320px; height: 600px; padding-top: 100px;">
+	<div class="container" id="news" style="width: 1320px; height: 900px; padding-top: 100px;">
 		<div class="h4 d-flex justify-content-center">뉴스 API</div>
 	</div>
 	<!-- 조회 -->
-	<div id="myCarousel" class="carousel slide carousel-dark position-relative" data-bs-touch="false" style="width: 1000px; padding: 100px 50px 0 50px; box-sizing: border-box; margin: auto;">
+	<div id="myCarousel" class="carousel slide carousel-dark position-relative" data-bs-touch="false" style="width: 1000px; height: 900px; padding: 100px 50px 0 50px; box-sizing: border-box; margin: auto;">
   		<div class="carousel-inner" style="margin: auto;">
 	    	<div class="carousel-item active">
 				<div class="d-flex justify-content-center">
@@ -578,7 +608,7 @@
   		</div>
 	</div>
 	<!-- 입금 -->
-	<div class="container text-center" id="deposit" style="width: 1320px; height: 600px; padding-top: 100px;">
+	<div class="container text-center" id="deposit" style="width: 1320px; height: 900px; padding-top: 100px;">
 		<form>
 			<div class="row-md">
 				<div class="fs-1" style="margin-bottom: 30px; font-family: 'Dongle', sans-serif;">입금</div>
@@ -613,7 +643,7 @@
 	    </div>
 	</div>
 	<!-- 이체 -->
-	<div class="container text-center" id="send" style="width: 1320px; height: 600px; padding-top: 100px;">
+	<div class="container text-center" id="send" style="width: 1320px; height: 900px; padding-top: 100px;">
 		<form>
 			<div class="row-md">
 				<div class="fs-1" style="margin-bottom: 30px; font-family: 'Dongle', sans-serif;">이체</div>
@@ -651,7 +681,7 @@
 	    </div>
 	</div>
 	<!-- 자동이체 -->
-	<div class="container text-center" id="autoSend" style="width: 1320px; height: 600px; padding-top: 100px;">
+	<div class="container text-center" id="autoSend" style="width: 1320px; height: 900px; padding-top: 100px;">
 		<form>
 			<div class="row-md">
 				<div class="fs-1" style="margin-bottom: 30px; font-family: 'Dongle', sans-serif;">자동이체</div>
@@ -695,24 +725,26 @@
 	    </div>	
 	</div>
 	<!-- 환율 -->
-	<div class="container" style="width: 1000px; height: 600px; padding-top: 100px;" id="exchangeRate">
+	<div class="container" style="width: 1320px; height: 900px; padding-top: 100px;" id="exchangeRate">
 		<div class="h4 d-flex justify-content-center">환율 API</div>
 	</div>
 	<!-- 국내주식 -->
-	<div class="container" style="width: 1000px; height: 600px; padding-top: 100px;" id="domesticStock">
+	<div class="container" style="width: 1320px; height: 900px; padding-top: 100px;" id="domesticStock">
 		<div class="h4 d-flex justify-content-center">국내 주식 API</div>
 	</div>
 	<!-- 해외주식 -->
-	<div class="container" style="width: 1000px; height: 600px; padding-top: 100px;" id="foreignStock">
+	<div class="container" style="width: 1320px; height: 900px; padding-top: 100px;" id="foreignStock">
 		<div class="h4 d-flex justify-content-center">해외 주식 API</div>
 	</div>
-	<div class="container" style="padding: 20px;">
-  		<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+	<div class="container bg-white" id="footer">
+  		<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top bg-white">
     		<ul class="nav col-4 justify-content-start list-unstyled d-flex">
     			<li><a href="#" class="nav-link px-2 text-secondary">KOKOA BANK</a></li>
     		</ul>
     		<div class="col-4 d-flex align-items-center justify-content-end">
-      			<span class="mb-3 mb-md-0 text-body-secondary">Copyright © KokoaBank Corp. All rights reserved.</span>
+      			<div class="copyright">
+     		 		&copy; Copyright <strong><span>KOKOA BANK</span></strong> Corp. All Rights Reserved
+    			</div>
     		</div>
   		</footer>
   	<a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
@@ -722,16 +754,7 @@
     <!-- JqueryUi -->
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     <!-- Vendor JS Files -->
-	<script src="assets/vendor/apexcharts/apexcharts.min.js"></script>
 	<script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-	<script src="assets/vendor/chart.js/chart.umd.js"></script>
-	<script src="assets/vendor/echarts/echarts.min.js"></script>
-	<script src="assets/vendor/quill/quill.min.js"></script>
-	<script src="assets/vendor/simple-datatables/simple-datatables.js"></script>
-	<script src="assets/vendor/tinymce/tinymce.min.js"></script>
-	<script src="assets/vendor/php-email-form/validate.js"></script>
-	<!-- Template Main JS File -->
-	<script src="assets/js/main.js"></script>
 	<!-- 스크립트 작성 -->
 	<script type="text/javascript">	
 		
@@ -775,7 +798,38 @@
 
 			$("#balance").val(balance);
 		});
+	 	
+	 	// 상단으로 가는 버튼
+		const backtotop = document.querySelector('.back-to-top')
 
+		if (backtotop) {
+		  	const toggleBacktotop = () => {
+	   			if (window.scrollY > 100) {
+		      		backtotop.classList.add('active')
+		    	} else {
+		      		backtotop.classList.remove('active')
+		    	}
+		  	}
+
+		  	window.addEventListener('load', toggleBacktotop)
+		  	window.addEventListener('scroll', toggleBacktotop)
+		}
+	 	
+	 	// 푸터 스크롤 내릴때
+	 	const footer = document.querySelector('#footer')
+	 	
+	 	if (footer) {
+	 		const toggleFooter =  () => {
+	 			if (window.scrollY > 100) {
+	 				footer.classList.add('fixed-bottom')
+	 			} else {
+	 				footer.classList.remove('fixed-bottom')
+	 			}
+	 		}
+	 		
+		  	window.addEventListener('load', toggleFooter)
+		  	window.addEventListener('scroll', toggleFooter)
+	 	}
     </script>
 </body>
 </html>
