--- a/html/register.html
+++ b/html/register.html
@@ -40,6 +40,11 @@
                   					</div>
 
                   					<form class="row g-3 needs-validation" novalidate>
+                  						<div class="col-12">
+                    						<label for="id" class="form-label">아이디</label>
+                    						<input type="text" name="name" class="form-control" id="id" required>
+                    						<div class="invalid-feedback">아이디를 입력해 주세요.</div>
+                    					</div>
                     					<div class="col-12">
                     						<label for="lastName" class="form-label">성</label>
                     						<input type="text" name="name" class="form-control" id="lastName" required>
