--- a/html/index.html
+++ b/html/index.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KOKOA BANK</title>
-    <!-- Vendor CSS Files -->
+    <!-- Bootstrap CSS Files -->
   	<link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  	<link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
 	<!-- JqueryUi -->
 	<link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
 	<!-- Fontawesome -->
@@ -17,6 +16,12 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Dongle:wght@300;400;700&display=swap" rel="stylesheet">
 	<style>
+		body {
+			overflow-y: hidden;
+			background: #f6f9ff;
+			color: #444444;
+		}
+		
 		.back-to-top {
 	  		position: fixed;
 		  	visibility: hidden;
@@ -49,7 +54,7 @@
 	</style>
 </head>
 <body>
-	<header class="fixed-top bg-white" id="header" style="width: 1320px; margin: auto;">
+	<header class="fixed-top container" id="header" style="width: 1320px; margin: auto;">
 		<div class="container">
       		<div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         		<ul class="nav col-auto me-auto mb-2 justify-content-center align-items-center">
@@ -64,8 +69,12 @@
           			<li><a href="#foreignStock" class="nav-link px-3 text-black">해외주식</a></li>
         		</ul>
         		<div class="col text-end">
-          			<button type="button" class="btn text-black" id="btnLogin"><a href="login.html" style="text-decoration: none; color: black; width: 100%; height: 100%;">로그인</a></button>
-					<button type="button" class="btn text-black" id="btnRegister"><a href="register.html" style="text-decoration: none; color: black; width: 100%; height: 100%;">회원가입</a></button>	
+          			<a href="login.html" style="text-decoration: none; color: black;">
+          				<button type="button" class="btn text-black" id="btnLogin">로그인</button>
+          			</a>
+					<a href="register.html" style="text-decoration: none; color: black;">
+						<button type="button" class="btn text-black" id="btnRegister">회원가입</button>
+					</a>	
         		</div>
       		</div>
     	</div>
@@ -73,11 +82,11 @@
 	<!-- 메인 -->
 	<div class="container">
 		<div class="row">
-			<div class="d-flex justify-content-center" style="padding: 33px; height: 600px; margin-top: 50px;">
+			<div class="d-flex justify-content-center" style="padding: 33px; height: 400px; margin-top: 50px;">
 				<iframe width="1200" height="100%" src="https://www.youtube.com/embed/NJUjU9ALj4A?controls=0?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="border-radius: 15px; margin: 50px;"></iframe>
 			</div>	
 		</div>
-		<div class="row-md d-flex justify-content-center" style="padding: 100px; font-family: 'Dongle', sans-serif;">
+		<div class="row-md d-flex justify-content-center" style="padding: 50px; font-family: 'Dongle', sans-serif;">
 			<div class="card" style="width: 13rem; height: 330px; margin: 0 20px;">
 				<img src="img/influencer1.jpg" class="card-img-top" alt="주식단테" style="margin-bottom: -15px;">
 				<div class="fs-1 text-center" style="margin-bottom: -20px; margin-top: 30px;">주식단테</div>
@@ -165,7 +174,7 @@
 		<div class="h4 d-flex justify-content-center">뉴스 API</div>
 	</div>
 	<!-- 조회 -->
-	<div id="myCarousel" class="carousel slide carousel-dark position-relative" data-bs-touch="false" style="width: 1000px; height: 900px; padding: 100px 50px 0 50px; box-sizing: border-box; margin: auto;">
+	<div id="myCarousel" class="carousel slide carousel-dark position-relative container" data-bs-touch="false" style="width: 1000px; height: 900px; padding: 100px 50px 0 50px; box-sizing: border-box; margin: auto;">
   		<div class="carousel-inner" style="margin: auto;">
 	    	<div class="carousel-item active">
 				<div class="d-flex justify-content-center">
@@ -180,7 +189,7 @@
 	    		</div>
 	    		<br>
 	    		<div class="d-flex justify-content-start">
-	    			<div class="col-1" style="margin-right: -32px;">
+	    			<div class="col-1" style="margin-right: -3.6%;">
 	    				<button type="button" class="btn btn-danger" id="btnSearch">
 							<i class="fa-solid fa-magnifying-glass"></i>
 						</button>
@@ -730,24 +739,21 @@
 	<div class="container" style="width: 1320px; height: 900px; padding-top: 100px;" id="foreignStock">
 		<div class="h4 d-flex justify-content-center">해외 주식 API</div>
 	</div>
-	<div class="container bg-white" id="footer">
-  		<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top bg-white">
-    		<ul class="nav col-4 justify-content-start list-unstyled d-flex">
-    			<li><a href="#" class="nav-link px-2 text-secondary">KOKOA BANK</a></li>
-    		</ul>
+	<div class="container" id="footer">
+  		<footer class="d-flex flex-wrap justify-content-center align-items-center my-4 border-top" style="padding-top: 20px;">
     		<div class="col-4 d-flex align-items-center justify-content-end">
       			<div class="copyright">
      		 		&copy; Copyright <strong><span>KOKOA BANK</span></strong> Corp. All Rights Reserved
     			</div>
     		</div>
   		</footer>
-  	<a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  	<!-- <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a> -->
 	</div>
 	<!-- JQUERY -->
     <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
     <!-- JqueryUi -->
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
-    <!-- Vendor JS Files -->
+    <!-- Bootstrap JS Files -->
 	<script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 	<!-- 스크립트 작성 -->
 	<script type="text/javascript">	
@@ -793,7 +799,7 @@
 			$("#balance").val(balance);
 		});
 	 	
-	 	// 상단으로 가는 버튼
+/* 	 	// 상단으로 가는 버튼
 		const backtotop = document.querySelector('.back-to-top')
 
 		if (backtotop) {
@@ -807,14 +813,14 @@
 
 		  	window.addEventListener('load', toggleBacktotop)
 		  	window.addEventListener('scroll', toggleBacktotop)
-		}
+		} */
 	 	
 	 	// 푸터 스크롤 내릴때
 	 	const footer = document.querySelector('#footer')
 	 	
 	 	if (footer) {
 	 		const toggleFooter =  () => {
-	 			if (window.scrollY > 100) {
+	 			if (window.scrollY > -1) {
 	 				footer.classList.add('fixed-bottom')
 	 			} else {
 	 				footer.classList.remove('fixed-bottom')
@@ -824,6 +830,7 @@
 		  	window.addEventListener('load', toggleFooter)
 		  	window.addEventListener('scroll', toggleFooter)
 	 	}
+		
     </script>
 </body>
 </html>
